# ferrochart

./: .gitignore  Cargo.toml  LICENSE  README.md  package.json
.github/workflows/: ci.yml  pages.yml  publish.yml
crates/core/: Cargo.toml
crates/core/src/: annotation.rs  candle.rs  chart_type.rs  data.rs  decimation.rs  geometry.rs  interaction.rs  layout.rs  lib.rs  marker.rs  transform.rs  zoom.rs
crates/core/src/indicator/: adx.rs  anchored_vwap.rs  atr.rs  bollinger.rs  cci.rs  cusum.rs  donchian.rs  ema.rs  equity_curve.rs  ichimoku.rs  keltner.rs  macd.rs  mod.rs  obv.rs  parabolic_sar.rs  rsi.rs  session_vwap.rs  sma.rs  stochastic.rs  supertrend.rs  volume_profile.rs  volume_sma.rs  williams_r.rs
crates/ffi/: Cargo.toml  cbindgen.toml  ferrochart.h
crates/ffi/src/: lib.rs
crates/render/: Cargo.toml
crates/render/src/: chart.rs  lib.rs  renderer.rs  style.rs  svg.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: bindings.rs  canvas.rs  chart.rs  lib.rs
docs/: core.md  render.md  todo.md  wasm-api.md
docs/integration/: axum-endpoint.md  c-cpp.md  csharp.md  python.md  react-wrapper.md
examples/: Cargo.toml
examples/src/: main.rs
examples/web/: index.html
