# SPDX-License-Identifier: AGPL-3.0-or-later
# Copyright (C) 2025 Robert Krick

[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/render",
    "crates/wasm",
    "crates/ffi",
    "examples",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
repository = "https://github.com/robert-krick/ferrochart"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# pedantic lints that produce only noise in numeric/chart code
too_many_lines = "allow"
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"