# SPDX-License-Identifier: AGPL-3.0-or-later
# Copyright (C) 2025 Robert Krick

[package]
name = "ferrochart-examples"
description = "Example applications for FerroChart"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ferrochart-core = { path = "../crates/core" }
ferrochart-render = { path = "../crates/render" }

[lints]
workspace = true