[package]
name = "powerchart-core"
description = "Core data structures and layout engine for PowerChart"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
serde = ["dep:serde"]

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }

[lints]
workspace = true
