[package]
name = "ferrochart-core"
description = "Core data structures and layout engine for FerroChart"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
serde = ["dep:serde"]

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }

[lints]
workspace = true
