# SPDX-License-Identifier: AGPL-3.0-or-later
# Copyright (C) 2025 Robert Krick

[package]
name = "ferrochart-ffi"
description = "C-compatible FFI bindings for FerroChart"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
ferrochart-core = { path = "../core", features = ["serde"] }
ferrochart-render = { path = "../render", features = ["serde"] }
serde_json = "1"

[lints.rust]
# FFI requires unsafe for extern "C" functions and raw pointer handling.
unsafe_code = "allow"
missing_docs = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
too_many_lines = "allow"
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
