# SPDX-License-Identifier: AGPL-3.0-or-later
# Copyright (C) 2025 Robert Krick

[package]
name = "ferrochart-render"
description = "Renderer trait and backends for FerroChart"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ferrochart-core = { path = "../core" }

[lints]
workspace = true