[package]
name = "powerchart-wasm"
description = "WebAssembly bindings for PowerChart"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
powerchart-core = { path = "../core" }
powerchart-render = { path = "../render" }
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3"
features = [
    "CanvasRenderingContext2d",
    "Document",
    "DomRect",
    "Element",
    "HtmlCanvasElement",
    "MouseEvent",
    "WheelEvent",
    "Window",
    "EventTarget",
    "AddEventListenerOptions",
]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[lints]
workspace = true
