# SPDX-License-Identifier: AGPL-3.0-or-later
# Copyright (C) 2025 Robert Krick

[package]
name = "ferrochart-wasm"
description = "WebAssembly bindings for FerroChart"
version.workspace = true
edition.workspace = true
license.workspace = true
repository = "https://github.com/RobertKrick1966/ferrochart"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ferrochart-core = { path = "../core", features = ["serde"] }
serde_json = "1"
ferrochart-render = { path = "../render", features = ["serde"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3"
features = [
    "CanvasRenderingContext2d",
    "Document",
    "DomRect",
    "Element",
    "HtmlCanvasElement",
    "KeyboardEvent",
    "MouseEvent",
    "Touch",
    "TouchEvent",
    "TouchList",
    "WheelEvent",
    "Window",
    "EventTarget",
    "AddEventListenerOptions",
]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[lints]
workspace = true